--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "autoprefixer": "^10.4.13",
+    "nodemon": "^2.0.20",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
